Closed
Bug 605982
Opened 15 years ago
Closed 15 years ago
mozMatchesSelector should raise a SYNTAX_ERR exception on invalid selectors
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla2.0b7
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | - |
People
(Reporter: mattcoz, Assigned: mounir)
References
(
URL
)
Details
(Keywords: dev-doc-complete, Whiteboard: [good first bug])
Attachments
(1 file, 1 obsolete file)
|
5.19 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
approval2.0+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.2.11) Gecko/20101012 Firefox/3.6.11
Build Identifier:
Currently mozMatchesSelector returns false when called with an invalid selector, this is the wrong behavior. Here is what the W3C draft says:
"If the given group of selectors is invalid ([SELECT], section 13), the implementation must raise a SYNTAX_ERR exception ([DOM-LEVEL-3-CORE], section 1.4)."
The webkit and ie implementations of this method correctly raise the exception.
Reproducible: Always
Steps to Reproduce:
1. Call mozMatchesSelector with an invalid selector.
Actual Results:
returns false
Expected Results:
raises SYNTAX_ERR exception
| Reporter | ||
Updated•15 years ago
|
OS: Windows 7 → All
Hardware: x86 → All
Comment 1•15 years ago
|
||
Compatibility concern, content/base/src/nsGenericElement.cpp looks easy to fix even for someone not really familiar with the code, should address for this release, I think.
URL: javascript: try { document.documentEl...
Status: UNCONFIRMED → NEW
blocking2.0: --- → ?
Ever confirmed: true
Whiteboard: [good first bug]
| Assignee | ||
Updated•15 years ago
|
Assignee: nobody → mounir.lamouri
Status: NEW → ASSIGNED
Version: unspecified → Trunk
| Assignee | ||
Comment 2•15 years ago
|
||
I'm wondering if we shouldn't add the tests to content/base/test/file_bug416317.xhtml?
Attachment #484864 -
Flags: review?(bzbarsky)
Attachment #484864 -
Flags: approval2.0?
| Assignee | ||
Comment 3•15 years ago
|
||
By the way, thank you for your report, Matt :)
Comment 4•15 years ago
|
||
Comment on attachment 484864 [details] [diff] [review]
Patch v1
I'm fine either way on the test, but you should be propagating out the actual error from ParseSelectorList instead of assuming it's always SYNTAX_ERR.
Attachment #484864 -
Flags: review?(bzbarsky) → review-
| Assignee | ||
Comment 5•15 years ago
|
||
Attachment #484864 -
Attachment is obsolete: true
Attachment #485006 -
Flags: review?(bzbarsky)
Attachment #484864 -
Flags: approval2.0?
| Assignee | ||
Updated•15 years ago
|
Attachment #485006 -
Flags: approval2.0?
Comment 6•15 years ago
|
||
Comment on attachment 485006 [details] [diff] [review]
Patch v2
r=me
Attachment #485006 -
Flags: review?(bzbarsky)
Attachment #485006 -
Flags: review+
Attachment #485006 -
Flags: approval2.0?
Attachment #485006 -
Flags: approval2.0+
| Assignee | ||
Comment 7•15 years ago
|
||
Pushed:
http://hg.mozilla.org/mozilla-central/rev/25507af6a959
Thank you for your report Matt :)
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Keywords: dev-doc-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b8
Updated•15 years ago
|
Target Milestone: mozilla2.0b8 → mozilla2.0b7
Comment 8•15 years ago
|
||
Updated documentation:
https://developer.mozilla.org/en/DOM/Node.mozMatchesSelector
Noted on Firefox 4 for developers.
Keywords: dev-doc-needed → dev-doc-complete
Updated•15 years ago
|
blocking2.0: ? → -
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•