Bug 605982 - mozMatchesSelector should raise a SYNTAX_ERR exception on invalid selectors. r+a=bz